admin panel Calendar fixes. Trying to add JqueryUI datepicker. Failed as it's not showing... Try again later

--- a/ChickNorris/WebContent/resources/css/admin.css
+++ b/ChickNorris/WebContent/resources/css/admin.css
@@ -79,13 +79,11 @@ hr {
 }
 
 #map-canvas {
-	width: 600px;
 	height: 600px;
 }
 
 #panel {
-	text-align: left;
-	padding-left: 10px;
+	padding-bottom: 20px;
 }
 
 #mailPanel {
@@ -121,5 +119,6 @@ hr {
 }
 
 #calendarForm {
-	
+	padding-left: 40px;
+	margin-top: 30px;
 }
